tests/NormalTests/paczka1/fuzzy1/78413066.err
Error in line 7: EqHnn4hfR S152 58,5
Error in line 9: EqHnn4hfR S895 14,0
Error in line 10: EqHnn4hfR S391 11,1
Error in line 4: 440U S152 37,0
Error in line 17: zKUuW S624 20,4
Error in line 11: EqHnn4hfR S895 8,5
Error in line 23: EqHnn4hfR S624 19,9
Error in line 36: UFvpNEsRKvp S624 40,3
Error in line 33: XBNyxbf S624 98,3
